# Porescale_RTM

./: .gitignore  CMakeLists.txt  README.md  Wallula_2810_pore1_final_slice73.raw  Wallula_2810_pore1_final_slice73.tif  reactive_transport.h5  reactive_transport.xmf
include/: cuda_utils.cuh  fvm_utils.cuh  io_utils.hpp  reactions2d.cuh  transport2d.cuh
scripts/: build.sh  delete_build_run.sh
src/: io_utils.cpp  main.cpp  reactions2d.cu  transport2d.cu
